[gd_scene load_steps=17 format=3 uid="uid://d3e57kxopdxv5"]

[ext_resource type="Script" path="res://scene_prefabs/menus_and_guis/hud_manager.gd" id="1_154uy"]
[ext_resource type="Texture2D" uid="uid://dhmu3mcksydtt" path="res://assets/sprites/menus_and_gui/overworld_hud_imgs/hp_bar.png" id="2_018o7"]
[ext_resource type="Texture2D" uid="uid://bq8346tx7io7g" path="res://assets/sprites/menus_and_gui/overworld_hud_imgs/hp_bar_frame.png" id="3_xorbd"]
[ext_resource type="PackedScene" uid="uid://dlnysb1rjh2qq" path="res://scene_prefabs/menus_and_guis/mana_value_tracker.tscn" id="4_dvjj2"]
[ext_resource type="PackedScene" uid="uid://cogpts60jbjbf" path="res://scene_prefabs/menus_and_guis/spell_icon.tscn" id="5_2ovb2"]
[ext_resource type="Texture2D" uid="uid://bhnj52ci1micl" path="res://assets/sprites/menus_and_gui/overworld_hud_imgs/spell_slots/frames/spell_slot_frame.png" id="6_lqvhg"]
[ext_resource type="PackedScene" uid="uid://bnfhcx8ia5jqy" path="res://scene_prefabs/menus_and_guis/spellcraft_class_selector.tscn" id="7_bys04"]
[ext_resource type="Texture2D" uid="uid://dkrrhj20ngflq" path="res://assets/sprites/menus_and_gui/spellcraft_menu_imgs/spellcraft_menu_red_mana.png" id="7_fkkxa"]
[ext_resource type="Texture2D" uid="uid://rvreceorq8gv" path="res://assets/sprites/menus_and_gui/overworld_hud_imgs/spell_slots/icons/spell_slot_icon.png" id="7_r8a5a"]
[ext_resource type="PackedScene" uid="uid://dcuql0xn2dtnn" path="res://scene_prefabs/menus_and_guis/crosshair.tscn" id="8_ji24q"]
[ext_resource type="Texture2D" uid="uid://dprj4mn87m7ux" path="res://assets/sprites/menus_and_gui/spellcraft_menu_imgs/spellcraft_menu_blue_mana.png" id="8_kikgm"]
[ext_resource type="Texture2D" uid="uid://jm3f4ipjlcag" path="res://assets/sprites/menus_and_gui/spellcraft_menu_imgs/spellcraft_menu_green_mana.png" id="9_u46kl"]
[ext_resource type="Texture2D" uid="uid://dt48cv805ctha" path="res://assets/sprites/menus_and_gui/spellcraft_menu_imgs/spellcraft_menu_white_mana.png" id="10_ywe7d"]
[ext_resource type="Texture2D" uid="uid://dq1xvw8pk2b38" path="res://assets/sprites/menus_and_gui/spellcraft_menu_imgs/spellcraft_menu_black_mana.png" id="11_m4bia"]
[ext_resource type="Texture2D" uid="uid://d0432x205sstq" path="res://assets/sprites/menus_and_gui/spellcraft_menu_imgs/spellcraft_menu_grey_mana.png" id="12_ilaas"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_407db"]
bg_color = Color(0.243137, 0.243137, 0.243137, 0.498039)

[node name="PlayerHUD" type="CanvasLayer" node_paths=PackedStringArray("spell_icons")]
script = ExtResource("1_154uy")
spell_icons = [null]

[node name="overworld_hud" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="mana_hp_panelcontainer" type="PanelContainer" parent="overworld_hud"]
layout_mode = 1
anchors_preset = -1
offset_right = 100.0
offset_bottom = 56.0
scale = Vector2(3.83255, 3.83255)

[node name="HBoxContainer" type="HBoxContainer" parent="overworld_hud/mana_hp_panelcontainer"]
layout_mode = 2

[node name="hp_centercontainer" type="CenterContainer" parent="overworld_hud/mana_hp_panelcontainer/HBoxContainer"]
layout_mode = 2

[node name="hp_bar" type="TextureProgressBar" parent="overworld_hud/mana_hp_panelcontainer/HBoxContainer/hp_centercontainer"]
layout_mode = 2
value = 67.0
fill_mode = 3
texture_under = ExtResource("2_018o7")
texture_over = ExtResource("3_xorbd")
texture_progress = ExtResource("2_018o7")
tint_under = Color(0.378232, 7.18953e-07, 1.92523e-07, 1)
tint_progress = Color(1, 0.231373, 0.172549, 1)

[node name="mana_bars_vbox" type="VBoxContainer" parent="overworld_hud/mana_hp_panelcontainer/HBoxContainer"]
layout_mode = 2

[node name="mana_tracker_red" parent="overworld_hud/mana_hp_panelcontainer/HBoxContainer/mana_bars_vbox" instance=ExtResource("4_dvjj2")]
layout_mode = 2
tint_under = Color(0.407843, 0, 0.0588235, 1)
tint_progress = Color(1, 0, 0, 1)
maximum_mana = 100.0
mana_regen_rate = 2.0

[node name="mana_tracker_blue" parent="overworld_hud/mana_hp_panelcontainer/HBoxContainer/mana_bars_vbox" instance=ExtResource("4_dvjj2")]
layout_mode = 2
tint_under = Color(0, 0.0588235, 0.407843, 1)
tint_progress = Color(0, 0, 1, 1)
colour = 1
maximum_mana = 100.0
mana_regen_rate = 2.0

[node name="mana_tracker_green" parent="overworld_hud/mana_hp_panelcontainer/HBoxContainer/mana_bars_vbox" instance=ExtResource("4_dvjj2")]
layout_mode = 2
tint_under = Color(0.0588235, 0.407843, 0, 1)
tint_progress = Color(0, 1, 0, 1)
colour = 2
maximum_mana = 100.0
mana_regen_rate = 2.0

[node name="mana_tracker_white" parent="overworld_hud/mana_hp_panelcontainer/HBoxContainer/mana_bars_vbox" instance=ExtResource("4_dvjj2")]
layout_mode = 2
tint_under = Color(0.674814, 0.674815, 0.674814, 1)
colour = 3
maximum_mana = 100.0
mana_regen_rate = 2.0

[node name="mana_tracker_black" parent="overworld_hud/mana_hp_panelcontainer/HBoxContainer/mana_bars_vbox" instance=ExtResource("4_dvjj2")]
layout_mode = 2
tint_under = Color(0.266575, 0.266575, 0.266575, 1)
tint_progress = Color(0, 0, 0, 1)
colour = 4
maximum_mana = 100.0
mana_regen_rate = 2.0

[node name="mana_tracker_colourless" parent="overworld_hud/mana_hp_panelcontainer/HBoxContainer/mana_bars_vbox" instance=ExtResource("4_dvjj2")]
layout_mode = 2
tint_under = Color(0.140447, 0.140448, 0.140447, 1)
tint_progress = Color(0.533333, 0.533333, 0.533333, 1)
colour = 5
maximum_mana = 100.0
mana_regen_rate = 2.0

[node name="minimap_panelcontainer" type="PanelContainer" parent="overworld_hud"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.741
anchor_right = 1.0
anchor_bottom = 0.233
offset_left = 0.36792
offset_bottom = 0.0159912
grow_horizontal = 0

[node name="placeholder_label" type="Label" parent="overworld_hud/minimap_panelcontainer"]
layout_mode = 2
text = "PLACEHOLDER
MINIMAP HERE
EVENTUALLY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="spell_slots_container" type="CenterContainer" parent="overworld_hud"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.441
anchor_bottom = 0.441
offset_top = 0.231995
offset_right = 400.0
offset_bottom = 1612.23
grow_vertical = 0
scale = Vector2(0.16, 0.16)

[node name="spell_slots_grid" type="GridContainer" parent="overworld_hud/spell_slots_container"]
layout_mode = 2

[node name="SpellIcon1" parent="overworld_hud/spell_slots_container/spell_slots_grid" instance=ExtResource("5_2ovb2")]
layout_mode = 2

[node name="SpellIcon2" parent="overworld_hud/spell_slots_container/spell_slots_grid" instance=ExtResource("5_2ovb2")]
layout_mode = 2

[node name="SpellIcon3" parent="overworld_hud/spell_slots_container/spell_slots_grid" instance=ExtResource("5_2ovb2")]
layout_mode = 2

[node name="SpellIcon4" parent="overworld_hud/spell_slots_container/spell_slots_grid" instance=ExtResource("5_2ovb2")]
layout_mode = 2

[node name="item_slots_container" type="CenterContainer" parent="overworld_hud"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -48.0
offset_right = 152.0
grow_vertical = 0

[node name="Panel" type="Panel" parent="overworld_hud/item_slots_container"]
z_index = -2
layout_mode = 2

[node name="spell_slots_grid" type="GridContainer" parent="overworld_hud/item_slots_container"]
layout_mode = 2
columns = 3

[node name="spell_slot_1_container" type="CenterContainer" parent="overworld_hud/item_slots_container/spell_slots_grid"]
layout_mode = 2

[node name="spell_slot_1_frame" type="TextureRect" parent="overworld_hud/item_slots_container/spell_slots_grid/spell_slot_1_container"]
layout_mode = 2
texture = ExtResource("6_lqvhg")

[node name="spell_slot_1_icon" type="TextureRect" parent="overworld_hud/item_slots_container/spell_slots_grid/spell_slot_1_container"]
z_index = -1
layout_mode = 2
texture = ExtResource("7_r8a5a")

[node name="spell_slot_2_container" type="CenterContainer" parent="overworld_hud/item_slots_container/spell_slots_grid"]
layout_mode = 2

[node name="spell_slot_2_frame" type="TextureRect" parent="overworld_hud/item_slots_container/spell_slots_grid/spell_slot_2_container"]
layout_mode = 2
texture = ExtResource("6_lqvhg")

[node name="spell_slot_2_icon" type="TextureRect" parent="overworld_hud/item_slots_container/spell_slots_grid/spell_slot_2_container"]
z_index = -1
layout_mode = 2
texture = ExtResource("7_r8a5a")

[node name="spell_slot_3_container" type="CenterContainer" parent="overworld_hud/item_slots_container/spell_slots_grid"]
layout_mode = 2

[node name="spell_slot_3_frame" type="TextureRect" parent="overworld_hud/item_slots_container/spell_slots_grid/spell_slot_3_container"]
layout_mode = 2
texture = ExtResource("6_lqvhg")

[node name="spell_slot_3_icon" type="TextureRect" parent="overworld_hud/item_slots_container/spell_slots_grid/spell_slot_3_container"]
z_index = -1
layout_mode = 2
texture = ExtResource("7_r8a5a")

[node name="Crosshair" parent="overworld_hud" instance=ExtResource("8_ji24q")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 1
grow_vertical = 1

[node name="spellcraft_hud" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="spellcraft_hud"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ManaInstancesBG" type="PanelContainer" parent="spellcraft_hud/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_407db")

[node name="ActiveManaInstancesContainer" type="GridContainer" parent="spellcraft_hud/VBoxContainer/ManaInstancesBG"]
layout_mode = 2
columns = 5

[node name="spellcraft_class_selector" type="PanelContainer" parent="spellcraft_hud/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SpellcraftClassSelector" parent="spellcraft_hud/VBoxContainer/spellcraft_class_selector" instance=ExtResource("7_bys04")]
layout_mode = 2

[node name="add_mana_prompt_container" type="CenterContainer" parent="spellcraft_hud/VBoxContainer"]
layout_mode = 2

[node name="add_mana_prompt_grid" type="GridContainer" parent="spellcraft_hud/VBoxContainer/add_mana_prompt_container"]
layout_mode = 2
columns = 3

[node name="add_red_mana_img" type="TextureRect" parent="spellcraft_hud/VBoxContainer/add_mana_prompt_container/add_mana_prompt_grid"]
layout_mode = 2
texture = ExtResource("7_fkkxa")

[node name="add_red_hotkey" type="Label" parent="spellcraft_hud/VBoxContainer/add_mana_prompt_container/add_mana_prompt_grid/add_red_mana_img"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Q"
horizontal_alignment = 1
vertical_alignment = 1

[node name="add_blue_mana_img" type="TextureRect" parent="spellcraft_hud/VBoxContainer/add_mana_prompt_container/add_mana_prompt_grid"]
layout_mode = 2
texture = ExtResource("8_kikgm")

[node name="add_blue_hotkey" type="Label" parent="spellcraft_hud/VBoxContainer/add_mana_prompt_container/add_mana_prompt_grid/add_blue_mana_img"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "W
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="add_green_mana_img" type="TextureRect" parent="spellcraft_hud/VBoxContainer/add_mana_prompt_container/add_mana_prompt_grid"]
layout_mode = 2
texture = ExtResource("9_u46kl")

[node name="add_green_hotkey" type="Label" parent="spellcraft_hud/VBoxContainer/add_mana_prompt_container/add_mana_prompt_grid/add_green_mana_img"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "E"
horizontal_alignment = 1
vertical_alignment = 1

[node name="add_white_mana_img" type="TextureRect" parent="spellcraft_hud/VBoxContainer/add_mana_prompt_container/add_mana_prompt_grid"]
layout_mode = 2
texture = ExtResource("10_ywe7d")

[node name="add_white_hotkey" type="Label" parent="spellcraft_hud/VBoxContainer/add_mana_prompt_container/add_mana_prompt_grid/add_white_mana_img"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="add_black_mana_img" type="TextureRect" parent="spellcraft_hud/VBoxContainer/add_mana_prompt_container/add_mana_prompt_grid"]
layout_mode = 2
texture = ExtResource("11_m4bia")

[node name="add_black_hotkey" type="Label" parent="spellcraft_hud/VBoxContainer/add_mana_prompt_container/add_mana_prompt_grid/add_black_mana_img"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "S"
horizontal_alignment = 1
vertical_alignment = 1

[node name="add_grey_mana_img" type="TextureRect" parent="spellcraft_hud/VBoxContainer/add_mana_prompt_container/add_mana_prompt_grid"]
layout_mode = 2
texture = ExtResource("12_ilaas")

[node name="add_grey_hotkey" type="Label" parent="spellcraft_hud/VBoxContainer/add_mana_prompt_container/add_mana_prompt_grid/add_grey_mana_img"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "D"
horizontal_alignment = 1
vertical_alignment = 1

[node name="menu_hud" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="menu_hud"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="menu_hud/MarginContainer"]
layout_mode = 2

[node name="menu_title" type="Label" parent="menu_hud/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Pause Menu Sketch Layout"

[node name="TabContainer" type="TabContainer" parent="menu_hud/MarginContainer/VBoxContainer"]
layout_mode = 2
current_tab = 0

[node name="Spellbook" type="VBoxContainer" parent="menu_hud/MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Map" type="VBoxContainer" parent="menu_hud/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Loadout" type="VBoxContainer" parent="menu_hud/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Skills" type="VBoxContainer" parent="menu_hud/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="Settings" type="TabContainer" parent="menu_hud/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
current_tab = 0
metadata/_tab_index = 4

[node name="Graphics" type="VBoxContainer" parent="menu_hud/MarginContainer/VBoxContainer/TabContainer/Settings"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Audio" type="VBoxContainer" parent="menu_hud/MarginContainer/VBoxContainer/TabContainer/Settings"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Controls" type="VBoxContainer" parent="menu_hud/MarginContainer/VBoxContainer/TabContainer/Settings"]
visible = false
layout_mode = 2
metadata/_tab_index = 2
